# factories-WIP

./: CMakeLists.txt  README.md
app/: factories.cpp  sqlitetest.cpp
src/: CMakeLists.txt  factory.cpp  factory.hpp  sqlitewrapper.cpp  sqlitewrapper.hpp
